--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,16 @@
 {
   "name": "Prompt Masti",
-  "short_name": "Prompt Masti",
+  "short_name": "PromptMasti",
+  "description": "AI Prompts, Blogging Tools, SEO Tips, and Creative Resources by Asif Kamboh.",
   "icons": [
-    {
-      "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/web-app-manifest-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/web-app-manifest-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
+    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-512x512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "display": "standalone"
+  "display": "standalone",
+  "start_url": "https://www.promptmasti.com/",
+  "scope": "/",
+  "orientation": "portrait"
 }
