--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "short_name": "PromptMasti",
   "description": "AI Prompts, PromptMasti is a creative Gemini prompts and AI tools site by TAyyaba Nadeem. Discover high-quality Gemini AI prompts and image-generation tips.",
   "icons": [
-    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-384x384.png", "sizes": "384x384", "type": "image/png" },
-    { "src": "https://cdn.statically.io/gh/tayyaba-nadeem/promptmasti/refs/heads/main/favicon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "https://cdn.promptmasti.com/favicon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "https://cdn.promptmasti.com/favicon-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "https://cdn.promptmasti.com/favicon-512x512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
